Enable more routes with soft access to devices for sharing
